k8s/k8s-config/ecommerce/environments/frontend/services/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend-service
  namespace: ecommerce
spec:
  ports:
    - name: tcp
      nodePort: 30080
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: ecommerce-frontend-deployment
  type: NodePort
