k8s/k8s-config/ecommerce/environments/frontend/services/ecommerce-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-frontend-ingress
  namespace: ecommerce
spec:
  defaultBackend:
    service:
      name: ecommerce-frontend-service
      port:
        number: 80
  ingressClassName: nginx
  rules:
    - host: ecommerce.anphuc.vn
      http:
        paths:
          - backend:
              service:
                name: ecommerce-frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
